# teoria-musical

./: README.md  gerador_de_escalas.py  pyproject.toml
docs/: escala_maior.md
