[tool.poetry]
name = "teoria-musical"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]
readme = "README.md"
packages = [{include = "teoria_musical"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.2"
rich = "^13.0.0"
typer = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
